Add identity verification
Fixes
* Add identity verification

Improvements
*

Changes
*

Refactoring
* Factor out identification into PeerVerificationOperationManager.swift
